<resources>
    <string name="app_name">HiTalk</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="details">Detail</string>
    <string name="refresh">Refresh</string>
    <string name="finish_btn">Done</string>
    <string name="login">Sign In</string>
    <string name="login_auto">Auto Login</string>
    <string name="login_forgot_pwd">Forgot password?</string>
    <string name="login_find_pwd">Retrieve Password</string>
    <string name="login_regeister">Get a new account</string>
    <string name="login_verify_code_hint">Tap the image to change</string>
    <string name="login_pwd_hint">Password</string>
    <string name="login_user_other_hint">HiTalkID/Email</string>
    <string name="check_wap_apn">@string/wap_apn</string>
    <string name="wap_apn">Disconnected from the WAP server.</string>
    <string name="check_network">Network connection failure. Check the network service.</string>
    <string name="warn_input_user_name">Enter a user name</string>
    <string name="warn_input_pass_word">Enter the password</string>
    <string name="warn_input_correct_pass_word">A password must contain 6 to 20 characters</string>
    <string name="warn_input_verify_code">Enter the verification code</string>
    <string name="exit">Exit</string>
    <string name="logining">Connecting...</string>
    <string name="retry">Retry</string>
    <string name="please_wait">Service failure. Try again.</string>
    <string name="rapidly_passport">Change ID</string>
    <string name="login_user_number_hint">Mobile number</string>
    <string name="account_number">Account:</string>
    <string name="email">Email</string>
    <string name="phone_error">The mobile number or password is incorrect. Enter again.</string>
    <string name="email_error">The email account or password is incorrect. Enter again.</string>
    <string name="id_error">The HiTalk ID or password is incorrect. Enter again.</string>
    <string name="no_phone">Not a Phone number, please re-enter</string>
    <string name="no_email_or_id">Not HiTalk ID or Email account, please re-enter</string>
    <string name="warn_input_email_too_long">The email address cannot contain more than 50 digits.</string>
    <string name="warn_input_woyouid_too_long">The HiTalk ID cannot contain more than 18 digits.</string>
    <string name="rwap_change">Set</string>
    <string name="login_verify_code">Graphic Verification</string>
    <string name="reset_password_success">The password has been reset</string>
    <string name="reset_password_faild">Failed to reset the password</string>
    <string name="send_email">A confirmation link has been sent to your email
		address. Click the link to activate your account.</string>
    <string name="mobile_not_bound">The number has not been bound.</string>
    <string name="reset_password_from_phone">By Phone number</string>
    <string name="reset_password_from_email">By Email</string>
    <string name="send_phone">A verification code has been sent to you. Use it to retrieve your password within 24 hours.</string>
    <string name="confirm_exit">The current verification code will be invalid, and you will be provided with a new one.</string>
    <string name="stranger_detail">Detail</string>
    <string name="friend_detail">Friend Information</string>
    <string name="see_details">Details</string>
    <string name="move_section">Move</string>
    <string name="join_blacklist">Add to Blacklist</string>
    <string name="move_section_success">The contact is moved successfully</string>
    <string name="move_section_failed">Failed to move the contact</string>
    <string name="age">Age:</string>
    <string name="sex">Gender</string>
    <string name="self_description">Profile:</string>
    <string name="birthday">Birthday:</string>
    <string name="animal">Zodiac:</string>
    <string-array name="blood">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
        <item>Rh</item>
        <item>MN</item>
        <item>HLA</item>
    </string-array>
    <string name="invite">Invite</string>
    <string name="not_added">Not Added</string>
    <string name="constellation">Astro:</string>
    <string name="country">Country-City</string>
    <string name="privince">Province:</string>
    <string name="city">City:</string>
    <string name="company">Company</string>
    <string name="school">School</string>
    <string name="love">Hobby:</string>
    <string name="add_friend">Friend</string>
    <string name="conversation">Chat</string>
    <string name="edit_backup">Add Remarks</string>
    <string name="self_signature">Signature:</string>
    <string name="name">Name</string>
    <string name="hitalk_id">ID:</string>
    <string name="backup_name">Remark Title:</string>
    <string name="contact_name">Contact name:</string>
    <string name="signature_hint">No update</string>
    <string name="friend_memoemail">E-mail:</string>
    <string name="friend_memophone">Phone:</string>
    <string name="friend_del_success">Deleted successfully</string>
    <string name="friend_move_success">Success to move by grouping</string>
    <string name="friend_detail_get_fail">Failure to get friends information from server</string>
    <string name="friend_update_memo_fail">Update Remarks failure</string>
    <string name="find_invite_displayName">Signature:</string>
    <string name="find_invite_friend_number">Number:</string>
    <string name="find_invite_friend_message">Invite your friend to HiTalk. It is good and fun.(This message will be free.)</string>
    <string name="find_no_user">The user does not exist.</string>
    <string name="phone_form_error">The mobile number format is incorrect.</string>
    <string name="phone_hitalk">HiTalk Number</string>
    <string name="phone_1">Home Number</string>
    <string name="phone_2">Mobile Number</string>
    <string name="phone_3">Work Number</string>
    <string name="phone_4">Work Fax</string>
    <string name="phone_5">Home Fax</string>
    <string name="phone_6">Pager</string>
    <string name="phone_7">Other Number</string>
    <string name="phone_8">Custom Number</string>
    <string name="phone_9">CallBack</string>
    <string name="phone_10">Car Phone</string>
    <string name="phone_11">Company Main</string>
    <string name="phone_12">ISDN</string>
    <string name="phone_13">Main Phone</string>
    <string name="phone_14">Other Fax</string>
    <string name="phone_15">Radio</string>
    <string name="phone_16">Telex</string>
    <string name="phone_17">TTY TDD</string>
    <string name="phone_18">Work Mobile</string>
    <string name="phone_19">Work Pager</string>
    <string name="phone_20">Assistant</string>
    <string name="phone_21">MMS</string>
    <string name="email_hitalk">HiTalk Email</string>
    <string name="email_1">Home Email</string>
    <string name="email_2">Work Email</string>
    <string name="email_3">Other Email</string>
    <string name="email_4">Mobile Email</string>
    <string name="email_5">Custom Email</string>
    <string name="find_by_id">Search for Friends by Mobile Number or HiTalk ID</string>
    <string name="find_by_details">Search for Friends by Personal Information</string>
    <string name="find_maybe_konwn">People I May Know</string>
    <string name="search_no_result">No match is found.</string>
    <string name="check_mobile_contacts">Check Friends in Address Book</string>
    <string name="no_recommend_friend">No people you may know</string>
    <string name="find_by_id_hint">Mobile number/HiTalk ID</string>
    <string name="find_by_details_hint">Name/School/Company</string>
    <string name="find_by_id_title">Search by Number</string>
    <string name="find_by_details_title">Search by Personal Information</string>
    <string name="find_maybe_konwn_title">People I May Know</string>
    <string name="find_maybe_konwn_no_result">No people you may know</string>
    <string name="find_friend_error">Failure to find friend,Check the NetWork</string>
    <string name="friends">Friends</string>
    <string name="find_friend_same_school">From the same school.</string>
    <string name="find_friend_same_city">In the same city.</string>
    <string name="find_friend_same_company">From the same organization.</string>
    <string name="find_friend_have_you_phone">You contact information exists.</string>
    <string name="find_friend_share_friends">%1$s common friends exist.</string>
    <string name="find_friend_result_id">ID:%1$s</string>
    <string name="find_friend_result_mobile">Number:%1$s</string>
    <string name="check_mobile_contacts_upload_contacts_info">Do you agree to upload your mobile address book? (It will be uploaded and stored in encrypted text.)</string>
    <string name="my_account_email">Email</string>
    <string name="setting">Settings</string>
    <string name="private_profile">Profile</string>
    <string name="private_profile_s">Profile></string>
    <string name="self_signature_title">Signature</string>
    <string name="online_status1">Status:</string>
    <string name="signature">Tap to edit your signature</string>
    <string name="signature_too_long">The personal signature must contain no more than
		100 characters.</string>
    <string name="set_privacy">Privacy Setting</string>
    <string name="privacy_mateial">Private Publicity</string>
    <string name="set_messagetips">Message Setting</string>
    <string name="set_broadcast_policy">Broadcast Message</string>
    <string name="set_imtomessage">IM Converting</string>
    <string name="set_groupmessagepolicy">Group Message</string>
    <string name="set_voice_tip">Prompt Tone</string>
    <string name="accounts_manager">Manage Multi-account</string>
    <string name="set_blog">Bind Microblog Account</string>
    <string name="set_theme">Set Theme</string>
    <string name="set_password">Change Password</string>
    <string name="verify_code_input_details">If you have not received the verification code,
		click Resend Verification Code %d seconds later.</string>
    <string name="policy_add_friends">Friend</string>
    <string name="policy_add_friends_allow_all">Allow everybody to friend me</string>
    <string name="policy_add_friends_need_confirm">Allow people I approve to friend me</string>
    <string name="policy_add_friends_allow_friends">Only Contacts</string>
    <string name="policy_add_friends_allow_none">Allow nobody to friend me</string>
    <string name="policy_privacy_material">Profile Openness</string>
    <string name="unbind_phone">Mobile Number</string>
    <string name="your_mobile_number">Mobile number:</string>
    <string name="upload_mobile_contacts">Upload Address Book</string>
    <string name="bind_phone">Bind</string>
    <string name="bind_phone_info">After binding your mobile number, you can easily find your contacts and friends and retrieve your HiTalk password.</string>
    <string name="upload_info">You do not have to bind your mobile phone to upload your address book.</string>
    <string name="bind_email_info">You can use the email account that you have bound to sign in to HiTalk or retrieve your HiTalk password.</string>
    <string name="your_email">Email account:</string>
    <string name="all_public">Open to all</string>
    <string name="olny_friend">Open to friends</string>
    <string name="only_contacts">Open to contacts in address book</string>
    <string name="contact_baseline_title">They are also using HiTalk</string>
    <string name="ignroe">Ignroe</string>
    <string name="add_all">Add all</string>
    <string name="bound_mail">A verification email has been sent to your mailbox
		%s. Click the link in the email to bind your email address.</string>
    <string name="voip_call_type_normal">Regular Call</string>
    <string name="voip_call_type_audio">VoIP Call</string>
    <string name="voip_call_type_vedio">VOIP video call</string>
    <string name="voip_call_type_cancel">Cancel</string>
</resources>