<?xml version="1.0" encoding="utf-8"?>
	<!-- 选择呼叫方式 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="wrap_content" android:gravity="bottom"
	android:id="@+id/popwindowlayout">
	<LinearLayout android:orientation="vertical"
		android:padding="16dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_gravity="bottom"
		android:background="#666666">
		<Button android:id="@+id/btn_normal" android:layout_width="280dp"
			android:layout_height="43dip" android:layout_gravity="center_horizontal"
			android:text="@string/voip_call_type_normal" android:textSize="24px"
			android:background="@drawable/btn_white" android:layout_marginBottom="8dip" />
		<Button android:id="@+id/btn_audio" android:layout_width="280dp"
			android:layout_height="43dip" android:layout_gravity="center_horizontal"
			android:text="@string/voip_call_type_audio" android:textSize="24px"
			android:background="@drawable/btn_white" android:layout_marginBottom="8dip" />
		<Button android:id="@+id/btn_video" android:layout_width="280dp"
			android:layout_height="43dip" android:layout_gravity="center_horizontal"
			android:text="@string/voip_call_type_vedio" android:textSize="24px"
			android:background="@drawable/btn_white" android:layout_marginBottom="12dip"/>
		<Button android:id="@+id/btn_cancel" android:layout_width="280dp"
			android:layout_height="43dip" android:layout_gravity="center_horizontal"
			android:text="@string/voip_call_type_cancel" android:textSize="24px"
			android:background="@drawable/btn_black" />
	</LinearLayout>
</LinearLayout>