<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="32dip" android:background="@drawable/contact_baseline_title_background"
	android:gravity="center_vertical">
	<TextView android:layout_width="wrap_content"
		android:layout_marginLeft="8dip" style="@style/friend_section_bar_text"
		android:layout_height="wrap_content" android:singleLine="true"
		android:text="@string/contact_baseline_title" />
	<RelativeLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="9px"
		android:layout_marginBottom="9px" android:visibility="gone">
		<Button android:id="@+id/ignroe_button" android:text="@string/ignroe"
			android:background="@drawable/btn_white_normal" style="@style/invite_text"
			android:layout_width="56px" android:layout_height="32px"
			android:layout_alignParentRight="true" android:layout_marginRight="20px" 
			android:paddingTop="2px"/>
		<Button android:id="@+id/add_all_button" android:text="@string/add_all"
			android:background="@drawable/btn_white_normal" style="@style/invite_text"
			android:layout_width="92px" android:layout_height="32px"
			android:layout_toLeftOf="@id/ignroe_button"
			android:layout_marginRight="6px" android:paddingTop="2px"/>
	</RelativeLayout>
</LinearLayout>
